--- a/Interpreter/pom.xml
+++ b/Interpreter/pom.xml
@@ -10,7 +10,7 @@
     <artifactId>Interpreter</artifactId>
     <packaging>pom</packaging>
 
-    <name>Interpreter</name>
+    <name>GrammarFiles</name>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
