--- a/GpSolver/pom.xml
+++ b/GpSolver/pom.xml
@@ -11,6 +11,18 @@
     <packaging>pom</packaging>
 
     <name>GpSolver</name>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <properties>
         <maven.compiler.source>18</maven.compiler.source>
