--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,19 @@
   <groupId>org.example</groupId>
   <artifactId>GProgramming</artifactId>
   <version>1.0.0-SNAPSHOT</version>
-  <modules>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+    <modules>
     <module>Interpreter</module>
     <module>GpSolver</module>
   </modules>
